--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.sergey-melnychuk</groupId>
   <artifactId>argumentz</artifactId>
-  <version>0.3.0-SNAPSHOT</version>
+  <version>0.3.0</version>
   <packaging>jar</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -32,6 +30,7 @@
     <connection>scm:git:git://github.com/sergey-melnychuk/argumentz.git</connection>
     <developerConnection>scm:git:ssh://github.com:sergey-melnychuk/argumentz.git</developerConnection>
     <url>http://github.com/sergey-melnychuk/argumentz/tree/master</url>
+    <tag>argumentz-0.3.0</tag>
   </scm>
 
   <properties>
